--- a/locales/he.json
+++ b/locales/he.json
@@ -404,7 +404,15 @@
       "title": "מאמרים וטיפים",
       "loading": "טוען מאמרים...",
       "empty": "אין מאמרים זמינים עדיין",
-      "error": "נכשל בטעינת המאמרים. נסה שוב."
+      "error": "נכשל בטעינת המאמרים. נסה שוב.",
+      "faq_card_title": "שאלות נפוצות",
+      "faq_card_subtitle": "מצאו תשובות לשאלות נפוצות"
+    },
+    "faq": {
+      "title": "שאלות נפוצות",
+      "loading": "טוען שאלות...",
+      "empty": "אין שאלות זמינות עדיין",
+      "error": "נכשל בטעינת השאלות. נסה שוב."
     },
     "settings": {
       "title": "הגדרות",
