--- a/locales/he.json
+++ b/locales/he.json
@@ -466,5 +466,10 @@
     "subtitle": "!כל הכבוד! המשיכו כך",
     "points_label": "מטבעות",
     "button": "!מעולה"
+  },
+  "session_lock": {
+    "blocked_title": "חיבור פעיל",
+    "blocked_message": "החשבון הזה נמצא כרגע בשימוש במכשיר אחר. אנא סגרו את החיבור השני, או המתינו מספר דקות ונסו שוב.",
+    "ok_button": "אישור"
   }
 }
