--- a/locales/he.json
+++ b/locales/he.json
@@ -284,10 +284,18 @@
     "loading": "טוען מאמרים...",
     "empty": "אין מאמרים זמינים עדיין",
     "error": "נכשל בטעינת המאמרים. נסה שוב.",
+    "faq_card_title": "שאלות ותשובות",
+    "faq_card_subtitle": "מצאו תשובות לשאלות נפוצות",
     "article_detail": {
       "loading": "טוען מאמר...",
       "error": "נכשל בטעינת תוכן המאמר",
       "back": "חזרה למאמרים"
+    },
+    "faq": {
+      "title": "שאלות ותשובות",
+      "loading": "טוען שאלות...",
+      "empty": "אין שאלות זמינות עדיין",
+      "error": "נכשל בטעינת השאלות. נסה שוב."
     }
   },
   "independent_login": {
